--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
 					</targetTests>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
+			 <plugin>
 				<groupId>com.thoughtworks.gauge.maven</groupId>
 				<artifactId>gauge-maven-plugin</artifactId>
 				<version>1.3.4</version>
@@ -190,7 +190,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>-->
+			</plugin>
 
 		</plugins>
 	</build>
